objects/data_import_test_object__c.object
<CustomObject>
    <fields>
        <fullName>cell__c</fullName>
        <label>cell</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>fname__c</fullName>
        <label>fname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lname__c</fullName>
        <label>lname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salutation__c</fullName>
        <label>salutation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>title__c</fullName>
        <label>title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>data import test object</label>
    <nameField>
        <label>data import test object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>data import test objects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>